Стабилизирована функциональность справочников

--- a/gmaFFFFF.CadastrBenin.DesktopApp/MainWindow.xaml
+++ b/gmaFFFFF.CadastrBenin.DesktopApp/MainWindow.xaml
@@ -39,6 +39,12 @@
                 </TransformGroup>
             </Path.RenderTransform>
         </Path>
+        <DataTemplate x:Key="ColomnDateDataGridTemplateColumn">
+            <TextBlock Text="{Binding Date, StringFormat={}{0:yyyy.MM.dd}, Converter={StaticResource OneYearDateConverter}}"/>
+        </DataTemplate>
+        <DataTemplate x:Key="ColomnDateEditDataGridTemplateColumn">
+            <DatePicker SelectedDate="{Binding Date, Converter={StaticResource OneYearDateConverter}}" SelectedDateFormat="Short" DisplayDateStart="1/1/1900" IsTodayHighlighted="True"/>
+        </DataTemplate>
     </Window.Resources>
     <Window.DataContext>
         <Binding Source="{StaticResource ViewModelLocator}"/>
@@ -51,11 +57,11 @@
         </Grid.RowDefinitions>
         <ToolBarTray Grid.Row="0" IsLocked="True" >
             <ToolBar x:Name="ApplicationToolbar" IsOverflowOpen="False" DataContext="Map"  >
-                <Button Content="{StaticResource SaveIcon}" Command="{Binding Path=SaveChangesCommand}" ToolTip="Сохранить"/>
+                <Button Content="{StaticResource SaveIcon}" Command="{Binding Path=SaveChangesCommand}" ToolTip="Сохранить" PreviewMouseUp="SaveButton_OnPreviewMouseUp"/>
                 <Button Content="{StaticResource UndoIcon}" Command="{Binding Path=UndoChangesCommand}" ToolTip="Отменить"/>
             </ToolBar>
         </ToolBarTray>
-        <TabControl Grid.Row="1" SelectionChanged="TabControl_OnSelectionChanged" >
+        <TabControl x:Name="MainTabControl" Grid.Row="1" SelectionChanged="TabControl_OnSelectionChanged" >
             <TabItem Header="Карта" DataContext="{Binding Map}">
                 <TabItem.Resources>
                     <DataTemplate x:Key="CadastrDepDataTemplate">
@@ -71,7 +77,7 @@
                         <m:MapPolygon Locations="{Binding WgsLocation}" Stroke="Blue" StrokeThickness="1"/>
                     </DataTemplate>
                     <DataTemplate x:Key="BuildingDataTemplate">
-                        <m:MapPolygon Locations="{Binding WgsLocation}" Stroke="DimGray" StrokeThickness="1" Fill="Chocolate" Opacity="0.7"/>
+                        <m:MapPolygon Locations="{Binding WgsLocation}" Stroke="DimGray" StrokeThickness="1" Fill="Chocolate" Opacity="0.6"/>
                     </DataTemplate>
                     <DataTemplate x:Key="ParcelPushPinDataTemplate">
                         <Button m:MapLayer.Position="{Binding Centroid}" m:MapLayer.PositionOffset="-20,-20" Click="FindParcelPushpinClick" Background = "#01000000" FocusVisualStyle="{x:Null}" BorderBrush="#01000000">
@@ -379,74 +385,37 @@
                     </DataGrid>
                     <StackPanel Grid.Column="2" DataContext="{Binding ParcelsViewSource}">
                         <TextBlock Text="Разрешенное использование" FontWeight="Bold" HorizontalAlignment="Center"/>
-                        <DataGrid ItemsSource="{Binding Utilisations}" EnableRowVirtualization="true" AutoGenerateColumns="False">
+                        <DataGrid x:Name="UtilisationsGrid" ItemsSource="{Binding Utilisations}" EnableRowVirtualization="true" AutoGenerateColumns="False">
                             <DataGrid.Columns>
-                                <DataGridTemplateColumn Header="Дата">
-                                    <DataGridTemplateColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Date, StringFormat={}{0:yyyy.MM.dd}, Converter={StaticResource OneYearDateConverter}}"/>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellTemplate>
-                                    <DataGridTemplateColumn.CellEditingTemplate>
-                                        <DataTemplate>
-                                            <DatePicker SelectedDate="{Binding Date, Converter={StaticResource OneYearDateConverter}, TargetNullValue=sys:DateTime.Now}" SelectedDateFormat="Short" DisplayDateStart="1/1/1900" IsTodayHighlighted="True"/>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellEditingTemplate>
-                                </DataGridTemplateColumn>
+                                <DataGridTemplateColumn Header="Дата" CellEditingTemplate="{StaticResource ColomnDateEditDataGridTemplateColumn}" CellTemplate="{StaticResource ColomnDateDataGridTemplateColumn}"/>
                                 <DataGridTextColumn Header="Документ основание" Binding="{Binding Document}"/>
                                 <DataGridComboBoxColumn Header="Вид использования"
                                     SelectedValueBinding="{Binding UtilisationTypeNom}"
                                     ItemsSource="{Binding Source={StaticResource ViewModelLocator}, Path=ParcelEditor.UtilisationTypes}"
                                     DisplayMemberPath="Nom"
                                     SelectedValuePath="Nom" />
-                                
                             </DataGrid.Columns>
                         </DataGrid>
                         <TextBlock Text="Налоги" FontWeight="Bold" HorizontalAlignment="Center"/>
-                        <DataGrid ItemsSource="{Binding Impots}" EnableRowVirtualization="true" AutoGenerateColumns="False">
+                        <DataGrid x:Name="ImpotsGrid" ItemsSource="{Binding Impots}" EnableRowVirtualization="true" AutoGenerateColumns="False">
                             <DataGrid.Columns>
-                                <DataGridTemplateColumn Header="Дата">
-                                    <DataGridTemplateColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Date, StringFormat={}{0:yyyy.MM.dd}, Converter={StaticResource OneYearDateConverter}}"/>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellTemplate>
-                                    <DataGridTemplateColumn.CellEditingTemplate>
-                                        <DataTemplate>
-                                            <DatePicker SelectedDate="{Binding Date, Converter={StaticResource OneYearDateConverter}, TargetNullValue=sys:DateTime.Now}" SelectedDateFormat="Short" DisplayDateStart="1/1/1900" IsTodayHighlighted="True"/>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellEditingTemplate>
-                                </DataGridTemplateColumn>
+                                <DataGridTemplateColumn Header="Дата" CellEditingTemplate="{StaticResource ColomnDateEditDataGridTemplateColumn}" CellTemplate="{StaticResource ColomnDateDataGridTemplateColumn}"/>
                                 <DataGridTextColumn Header="Документ основание" Binding="{Binding Document}"/>
                                 <DataGridTextColumn Header="Размер платежа" Binding="{Binding Somme}" />
                             </DataGrid.Columns>
                         </DataGrid>
                         <TextBlock Text="Выданные документы" FontWeight="Bold" HorizontalAlignment="Center"/>
-                        <DataGrid ItemsSource="{Binding CertificationDocuments}" EnableRowVirtualization="true" AutoGenerateColumns="False">
+                        <DataGrid x:Name="CertificationDocumentsGrid" ItemsSource="{Binding CertificationDocuments}" EnableRowVirtualization="true" AutoGenerateColumns="False">
                             <DataGrid.Columns>
-                                <DataGridTemplateColumn Header="Дата">
-                                    <DataGridTemplateColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Date, StringFormat={}{0:yyyy.MM.dd}, Converter={StaticResource OneYearDateConverter}}"/>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellTemplate>
-                                    <DataGridTemplateColumn.CellEditingTemplate>
-                                        <DataTemplate>
-                                            <DatePicker SelectedDate="{Binding Date, Converter={StaticResource OneYearDateConverter}, TargetNullValue=sys:DateTime.Now}" SelectedDateFormat="Short" DisplayDateStart="1/1/1900" IsTodayHighlighted="True"/>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellEditingTemplate>
-                                </DataGridTemplateColumn>
+                                <DataGridTemplateColumn Header="Дата" CellEditingTemplate="{StaticResource ColomnDateEditDataGridTemplateColumn}" CellTemplate="{StaticResource ColomnDateDataGridTemplateColumn}"/>
                                 <DataGridTextColumn Header="Номер документа" Binding="{Binding Num}"/>
                                 <DataGridComboBoxColumn Header="Вид документа"
                                     SelectedValueBinding="{Binding CertificationDocumentTypeNom}"
                                     ItemsSource="{Binding Source={StaticResource ViewModelLocator}, Path=ParcelEditor.CertificationDocumentTypes}"
                                     DisplayMemberPath="Nom"
                                     SelectedValuePath="Nom" />
-
                             </DataGrid.Columns>
                         </DataGrid>
-
-
                     </StackPanel>
                 </Grid>
             </TabItem>
