--- a/gmaFFFFF.CadastrBenin.DesktopApp/App.xaml
+++ b/gmaFFFFF.CadastrBenin.DesktopApp/App.xaml
@@ -6,7 +6,8 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 			 d1p1:Ignorable="d" 
 			 xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             DispatcherUnhandledException="App_OnDispatcherUnhandledException">
+             DispatcherUnhandledException="App_OnDispatcherUnhandledException"
+             Exit="App_OnExit">
 	<Application.Resources>
 		<ResourceDictionary>
 			<vm:ViewModelLocator x:Key="ViewModelLocator" d:IsDataSource="True" xmlns:vm="clr-namespace:gmaFFFFF.CadastrBenin.ViewModel;assembly=gmaFFFFF.CadastrBenin.ViewModel" />
