--- a/gmaFFFFF.CadastrBenin.DesktopApp/MainWindow.xaml
+++ b/gmaFFFFF.CadastrBenin.DesktopApp/MainWindow.xaml
@@ -59,6 +59,16 @@
                 </TransformGroup>
             </Path.RenderTransform>
         </Path>
+        <Path x:Key="DelIcon" Data="M1.5599976,19.225006L13.84198,19.225006 13.786987,19.367996C13.363953,20.522003 13.132996,21.766998 13.132996,23.065002 13.132996,24.363007 13.363953,25.608002 13.786987,26.761002L13.84198,26.904999 1.5599976,26.904999C0.69897461,26.904999,0,26.205002,0,25.345001L0,20.783005C0,19.923004,0.69897461,19.225006,1.5599976,19.225006z M20.942993,18.473007L19.06897,20.348007 22.026001,23.304993 19.06897,26.261993 20.942993,28.136002 23.901001,25.179001 26.857971,28.136002 28.731995,26.261993 25.774963,23.304993 28.731995,20.348007 26.857971,18.473007 23.901001,21.429993z M23.893982,14.957993C28.370972,14.957993 32,18.585999 32,23.065002 32,27.539001 28.370972,31.169998 23.893982,31.169998 19.416992,31.169998 15.787964,27.539001 15.787964,23.065002 15.787964,18.585999 19.416992,14.957993 23.893982,14.957993z M1.5599976,9.5269928L23.381958,9.5269928C24.242981,9.5269928,24.940979,10.225006,24.940979,11.085007L24.940979,12.354004 24.720947,12.334C24.447998,12.313004 24.171997,12.302994 23.893982,12.302994 20.185974,12.302994 16.908997,14.188995 14.973999,17.052002L14.875977,17.205002 1.5599976,17.205002C0.69897461,17.205002,0,16.507004,0,15.645004L0,11.085007C0,10.225006,0.69897461,9.5269928,1.5599976,9.5269928z M4.59198,2.0679932C3.6170044,2.0679932 2.8219604,2.8619995 2.8219604,3.8379974 2.8219604,4.8150024 3.6170044,5.6069946 4.59198,5.6069946 5.5679932,5.6069946 6.3619995,4.8150024 6.3619995,3.8379974 6.3619995,2.8619995 5.5679932,2.0679932 4.59198,2.0679932z M1.5599976,0L23.381958,0C24.242981,0,24.940979,0.69799805,24.940979,1.5579987L24.940979,6.1199951C24.940979,6.9810028,24.242981,7.6779938,23.381958,7.6779938L1.5599976,7.6779938C0.69897461,7.6779938,0,6.9810028,0,6.1199951L0,1.5579987C0,0.69799805,0.69897461,0,1.5599976,0z" Stretch="Uniform" Fill="#FF105CFF" Width="16" Height="16" Margin="0,0,0,0" RenderTransformOrigin="0.5,0.5">
+            <Path.RenderTransform>
+                <TransformGroup>
+                    <TransformGroup.Children>
+                        <RotateTransform Angle="0" />
+                        <ScaleTransform ScaleX="1" ScaleY="1" />
+                    </TransformGroup.Children>
+                </TransformGroup>
+            </Path.RenderTransform>
+        </Path>
         <DataTemplate x:Key="ColomnDateDataGridTemplateColumn">
             <TextBlock Text="{Binding Date, StringFormat={}{0:yyyy.MM.dd}, Converter={StaticResource OneYearDateConverter}}"/>
         </DataTemplate>
@@ -400,8 +410,9 @@
                     </Grid.RowDefinitions>
                     
                     <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" >
-                        <Button Content="{StaticResource NewIcon}" Margin="3" ToolTip="Новый участок" />
                         <Button Content="{StaticResource EditIcon}" Margin="3" ToolTip="Редактировать участок" Click="EditParcelGeometry_OnClick" />
+                        <Button Content="{StaticResource NewIcon}" Margin="3" ToolTip="Новый участок" Click="AddNewParcel"/>
+                        <Button Content="{StaticResource DelIcon}" Margin="3" ToolTip="Удалить участок" Click="DeleteParcel_OnClick"/>
                     </StackPanel>
                     <DataGrid x:Name="Parcels" Grid.Column="0" Grid.Row="1" DataContext="{Binding ParcelsViewSource}" ItemsSource="{Binding}" EnableRowVirtualization="true" AutoGenerateColumns="False" IsReadOnly="True">
                             <DataGrid.Columns>
